test/e2e/testdata/services/echo-clusterip.yaml
# Copyright 2026 The KubeLB Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# ClusterIP service for negative testing
# Should NOT create LoadBalancer CRD in kubelb cluster
apiVersion: v1
kind: Service
metadata:
  name: ($name)
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: ($name)
  ports:
    - port: 80
      targetPort: 8080
